--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="menu-btn" class="fas fa-bars"></div>
 </header>
 
-<!--
+
 <style>
     /* Style for the WhatsApp button */
     .floating-button {
@@ -104,7 +104,7 @@ WhatsApp popup
     <p>For WhatsApp, click the button below:</p>
     <a href="https://wa.me/1234567890" target="_blank" class="btn-whatsapp">Open WhatsApp</a>
     <p>Or call us directly at:</p>
-    <a href="tel:+1234567890" class="btn-call">123-456-7890</a>
+    <a href="tel:9129664191" class="btn-call">9129664191</a>
     <span class="close" onclick="togglePopup()">&times;</span>
 </div>
 
