--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ WhatsApp popup
 
     <div class="content">
         <p></p>
-        <h3>Rise Your Business With Us</h3>
+        <h3>Rise Your Business With Rise in Technology</h3>
         <p>Start your first step to Connect Your Business Globally</p>
         <a href="https://wa.me/9129664191" class="btn">Connect With Us On WhatsApp</a>
     </div>
