--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <header class="header">
     <a href="#home" class="logo"><img src="./images/image.png" alt="Rise In Technology"></a>
+    <p> ISO CERTIFIED 2022</p>
 
     <nav class="navbar">
         <a href="#home">home</a>
